--- a/index.html
+++ b/index.html
@@ -7,73 +7,74 @@
 <body>
 <header>
 	<nav>
-  		<ul>
-    		<li><a href="#"> Home</a></li>
-    		<li><a href="#"> Profile</a></li>
-    		<li><a href="#"> Blog</a></li>
-  		</ul>
-  	</nav>
+  	<ul>
+    	<li><a href="#"> Home</a></li>
+    	<li><a href="#"> Profile</a></li>
+    	<li><a href="#"> Blog</a></li>
+  	</ul>
+  </nav>
 </header>
-
-<section>
-  <div class="month-list">
-    <ul>
-      <li>
-        <a href="#">January</a>
-        <span class="disabled">My favorite month</span>
-      </li>
-      <li>
-        <a href="#">
-          <span class="active">February</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <span class="disabled">March</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">April</a>
-      </li>
-      <li>
-        <a href="#">
-          <div class="promo">
-            <span class="disabled">May</span>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">June</a>
-      </li>
-      <li>
-        <a href="#">July</a>
-      </li>
-      <li>
-        <a href="#">August</a>
-        <span class="disabled">My least favorite month</span>
-      </li>
-      <li>
-        <a href="#" class="disabled">September</a>
-      </li>
-    </ul>
-  </div>
-</section>
-
-<section>
-  <div class="grandparent">
-    <div class="parent">
-      <h4>Child of parent</h4>
-      <div>
-        <div>I'm red!</div>
-        <h4>I'm red's sister
-        <div>I'm blue!</div>
-        <h4>I'm blue's brother</h4>
-      </div>
+<article>
+  <section>
+    <div class="month-list">
+      <ul>
+        <li>
+          <a href="#">January</a>
+          <span class="disabled">My favorite month</span>
+        </li>
+        <li>
+          <a href="#">
+            <span class="active">February</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="disabled">March</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">April</a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="promo">
+              <span class="disabled">May</span>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#">June</a>
+        </li>
+        <li>
+          <a href="#">July</a>
+        </li>
+        <li>
+          <a href="#">August</a>
+          <span class="disabled">My least favorite month</span>
+        </li>
+        <li>
+          <a href="#" class="disabled">September</a>
+        </li>
+      </ul>
     </div>
-    <h4>Child of grandparent</h4>
-  </div>
-</section>
-
+  </section>
+</article>
+<article>
+    <section>
+    <div class="grandparent">
+      <div class="parent">
+        <h4>Child of parent</h4>
+        <div>
+          <div>I'm red!</div>
+          <h4>I'm red's sister</h4>
+          <div>I'm blue!</div>
+          <h4>I'm blue's brother</h4>
+        </div>
+      </div>
+      <h4>Child of grandparent</h4>
+    </div>
+  </section>
+</article>
 <footer class="padded">
 
   <div class="disclaimer">
@@ -84,6 +85,7 @@
           Privacy Policy
         </span>
       </span>
+      </a>
   </div>
 
   <div class="promo">
